terraform/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: student-management
  labels:
    app.kubernetes.io/name: student-management
    app.kubernetes.io/part-of: student-management
