terraform/kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-management-postgres
  namespace: student-management
  labels:
    app: student-management-postgres
spec:
  type: ClusterIP
  selector:
    app: student-management-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
